--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,33 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+    android:background="@color/cardview_dark_background"
   tools:context=".controller.LoginActivity">
 
   <com.google.android.gms.common.SignInButton
-    android:id="@+id/sign_in"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="8dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+      android:id="@+id/sign_in"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="#313435"
+      android:backgroundTint="#FFFFFF"
+      android:padding="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/dominion_logo"/>
+
+  <ImageView
+      android:id="@+id/dominion_logo"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="18dp"
+      android:layout_marginTop="90dp"
+      android:layout_marginEnd="18dp"
+      android:layout_marginBottom="77dp"
+      app:layout_constraintBottom_toTopOf="@+id/sign_in"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/DominionLogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
