--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,18 @@
     app:headerLayout="@layout/nav_header_main"
     app:menu="@menu/activity_main_drawer"/>
 
+  <fragment
+    android:id="@+id/nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/nav_graph" />
+
   <include
     layout="@layout/app_bar_main"
     android:layout_width="match_parent"
