--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -22,7 +22,7 @@
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:text="Hand"
+        android:text="View Hand"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/end_action"
