created action and buy fragments and added to nav graph

--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -71,7 +71,7 @@
     android:layout_height="wrap_content"/>
 
   <Button
-    android:id="@+id/play_action"
+    android:id="@+id/play_card"
     android:text="PLAY"
     android:textSize="32dp"
     android:textAlignment="center"
