--- a/app/src/main/res/layout/fragment_turn_summary.xml
+++ b/app/src/main/res/layout/fragment_turn_summary.xml
@@ -8,7 +8,7 @@
     android:background="#615757"
     tools:context=".controller.TurnSummaryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/turn_summary"
         android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
         android:text="Player's Turn Summary"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="buys"
+        app:layout_constraintBottom_toTopOf="@id/buys"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,20 +26,20 @@
         tools:layout_editor_absoluteY="24dp" />
 
     <TextView
-        android:id="@+id/actions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:freezesText="true"
-        android:text="Actions"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/recycler_view"
-        app:layout_constraintEnd_toStartOf="@+id/buys"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/turn_summary"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="24dp" />
+      android:id="@+id/actions"
+      android:layout_width="wrap_content"
+      android:layout_height="19dp"
+      android:layout_marginTop="4dp"
+      android:freezesText="true"
+      android:text="Actions"
+      android:textColor="#FFFFFF"
+      android:textSize="16sp"
+      app:layout_constraintBottom_toTopOf="@id/recycler_view"
+      app:layout_constraintEnd_toStartOf="@+id/buys"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/turn_summary"/>
+<!--        tools:layout_editor_absoluteX="26dp"-->
+<!--        tools:layout_editor_absoluteY="24dp" />-->
 
     <TextView
         android:id="@+id/buys"
@@ -53,8 +53,8 @@
         app:layout_constraintBottom_toTopOf="@id/recycler_view"
         app:layout_constraintEnd_toStartOf="@+id/gold"
         app:layout_constraintStart_toEndOf="@id/actions"
-        app:layout_constraintTop_toBottomOf="@id/turn_summary"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@id/turn_summary"/>
+<!--        app:layout_constraintVertical_bias="1.0" />-->
 
     <TextView
         android:id="@+id/gold"
@@ -73,13 +73,13 @@
         tools:layout_editor_absoluteY="24dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/start_my_turn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buys" />
+      android:id="@+id/recycler_view"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toTopOf="@id/start_my_turn"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/actions"/>
 
 
     <Button
