--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/drawer_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:fitsSystemWindows="true"
-  tools:openDrawer="start">
-
-  <com.google.android.material.navigation.NavigationView
-    android:id="@+id/nav_view"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:layout_gravity="start"
-    android:fitsSystemWindows="true"
-    app:headerLayout="@layout/nav_header_main"
-    app:menu="@menu/activity_main_drawer"/>
+  tools:context=".controller.MainActivity">
 
   <fragment
     android:id="@+id/nav_host_fragment"
@@ -29,10 +18,5 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:defaultNavHost="true"
     app:navGraph="@navigation/nav_graph" />
-
-  <include
-    layout="@layout/app_bar_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+  
+</androidx.constraintlayout.widget.ConstraintLayout>
