--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -5,7 +5,8 @@
   android:id="@+id/frameLayout4"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.DoActionFragment">
+  android:background="#615757"
+  tools:context=".controller.DoBuysFragment">
 
   <TextView
     android:id="@+id/actions"
@@ -15,7 +16,7 @@
     android:text="Actions"
     android:textColor="#FFFFFF"
     android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/image_view"
+    app:layout_constraintBottom_toTopOf="@id/view_pager"
     app:layout_constraintEnd_toStartOf="@+id/buys"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
@@ -28,7 +29,7 @@
     android:text="Buys"
     android:textColor="#FFFFFF"
     android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/image_view"
+    app:layout_constraintBottom_toTopOf="@id/view_pager"
     app:layout_constraintEnd_toStartOf="@+id/gold"
     app:layout_constraintStart_toEndOf="@id/actions"
     app:layout_constraintTop_toTopOf="parent"/>
@@ -41,13 +42,13 @@
     android:text="Gold"
     android:textColor="#FFFFFF"
     android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/image_view"
+    app:layout_constraintBottom_toTopOf="@id/view_pager"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/buys"
     app:layout_constraintTop_toTopOf="parent"/>
 
   <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/image_view"
+    android:id="@+id/view_pager"
     android:layout_width="0dp"
     android:layout_height="630dp"
     app:layout_constraintBottom_toTopOf="@id/play_card"
@@ -71,7 +72,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/end_turn"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/image_view"/>
+    app:layout_constraintTop_toBottomOf="@id/view_pager"/>
 
   <Button
     android:id="@+id/end_turn"
@@ -90,7 +91,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/buy_card"
-    app:layout_constraintTop_toBottomOf="@+id/image_view"/>
+    app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
