--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/frameLayout4"
-  android:layout_width="match_parent"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
-  android:background="#615757"
-  tools:context=".controller.DoBuysFragment">
+  android:layout_width="match_parent"
+  android:background="#615757">
 
   <TextView
     android:id="@+id/actions"
@@ -19,7 +18,8 @@
     app:layout_constraintBottom_toTopOf="@id/view_pager"
     app:layout_constraintEnd_toStartOf="@+id/buys"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="1.0"/>
 
   <TextView
     android:id="@+id/buys"
@@ -47,19 +47,21 @@
     app:layout_constraintStart_toEndOf="@id/buys"
     app:layout_constraintTop_toTopOf="parent"/>
 
-  <androidx.recyclerview.widget.RecyclerView
+  <androidx.viewpager.widget.ViewPager
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_pager"
-    android:layout_width="0dp"
-    android:layout_height="630dp"
-    app:layout_constraintBottom_toTopOf="@id/play_card"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@id/end_turn"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/buys"/>
+    app:layout_constraintTop_toBottomOf="@id/buys"
+    tools:context=".controller.DoActionFragment"/>
 
   <Button
     android:id="@+id/buy_card"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_width="150dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/buttonshape"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
@@ -76,8 +78,8 @@
 
   <Button
     android:id="@+id/end_turn"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_width="150dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/buttonshape"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
