--- a/app/src/main/res/layout/fragment_buys_options.xml
+++ b/app/src/main/res/layout/fragment_buys_options.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#615757"
-    tools:context=".controller.ActionFragment">
+    tools:context=".controller.BuysOptionsFragment">
 
     <!-- TODO: Add in Action/Buy/Money counters -->
 
