--- a/app/src/main/res/layout/fragment_buys_options.xml
+++ b/app/src/main/res/layout/fragment_buys_options.xml
@@ -1,137 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#615757"
-    tools:context=".controller.BuysOptionsFragment">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/frameLayout2"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="#615757"
+  tools:context=".controller.BuysOptionsFragment">
 
-    <!-- TODO: Add in Action/Buy/Money counters -->
+  <Button
+    android:id="@+id/end_turn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/red_button"
+    android:fontFamily="monospace"
+    android:shadowColor="#A8A8A8"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="5"
+    android:text="End Turn"
+    android:textColor="#FFFFFF"
+    android:textSize="30sp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/action"/>
 
-    <Button
-        android:id="@+id/money"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttonshape"
-        android:fontFamily="monospace"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="Money"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@id/victory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <ImageButton
+    android:id="@+id/money"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:background="@drawable/gold_button"
+    android:fontFamily="monospace"
+    android:scaleType="centerInside"
+    android:shadowColor="#A8A8A8"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="5"
+    android:src="@drawable/gold"
+    app:layout_constraintBottom_toTopOf="@id/purchase_victory"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/purchase_money"/>
 
-    <Button
+  <ImageButton
+    android:id="@+id/victory"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:background="@drawable/green_button"
+    android:fontFamily="monospace"
+    android:scaleType="centerInside"
+    android:shadowColor="#A8A8A8"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="5"
+    android:src="@drawable/province"
+    android:text="Victory"
+    android:textColor="#FFFFFF"
+    android:textSize="30sp"
+    app:layout_constraintBottom_toTopOf="@id/purchase_action"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/purchase_victory"/>
 
-        android:id="@+id/victory"
+  <ImageButton
+    android:id="@+id/action"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:background="@drawable/blue_button"
+    android:fontFamily="monospace"
+    android:scaleType="centerInside"
+    android:shadowColor="#A8A8A8"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="5"
+    android:src="@drawable/market_icon"
+    android:text="Action"
+    android:textColor="#FFFFFF"
+    android:textSize="30sp"
+    app:layout_constraintBottom_toTopOf="@+id/end_turn"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.528"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/purchase_action"/>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+  <TextView
+    android:id="@+id/players_buy_phase"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Player's Buy Phase"
+    android:textAlignment="center"
+    android:textColor="#FFFFFF"
+    android:textSize="32dp"
+    app:layout_constraintBottom_toTopOf="@+id/buys"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
-        android:background="@drawable/buttonshape"
-        android:fontFamily="monospace"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp"
-        android:text="Victory"
-        app:layout_constraintBottom_toTopOf="@id/action"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/money" />
+  <TextView
+    android:id="@+id/actions"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:freezesText="true"
+    android:text="Actions"
+    android:textAlignment="center"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/purchase_money"
+    app:layout_constraintEnd_toStartOf="@+id/buys"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/players_buy_phase"/>
 
-    <Button
-        android:id="@+id/action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttonshape"
-        android:fontFamily="monospace"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp"
-        android:text="Action"
-        app:layout_constraintBottom_toTopOf="@+id/end_turn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/victory" />
+  <TextView
+    android:id="@+id/buys"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:freezesText="true"
+    android:text="Buys"
+    android:textAlignment="center"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/purchase_money"
+    app:layout_constraintEnd_toStartOf="@+id/gold"
+    app:layout_constraintStart_toEndOf="@id/actions"
+    app:layout_constraintTop_toBottomOf="@id/players_buy_phase"/>
 
-    <Button
-        android:id="@+id/end_turn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttonshape"
-        android:fontFamily="monospace"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:textColor="#FFFFFF"
-        android:textSize="30sp"
-        android:text="End Turn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/action" />
+  <TextView
+    android:id="@+id/gold"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:freezesText="true"
+    android:text="Gold"
+    android:textAlignment="center"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/purchase_money"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/buys"
+    app:layout_constraintTop_toBottomOf="@id/players_buy_phase"/>
 
+  <TextView
+    android:id="@+id/purchase_money"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:text="Purchase Money Card"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/money"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/buys"
+    app:layout_constraintVertical_chainStyle="spread_inside"/>
 
-    <TextView
-        android:id="@+id/actions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Actions"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:freezesText="true"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="24dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/money"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buys"/>
+  <TextView
+    android:id="@+id/purchase_victory"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Purchase Victory Card"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/victory"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/money"/>
 
-    <TextView
-        android:id="@+id/buys"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Buys"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:freezesText="true"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="24dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/money"
-        app:layout_constraintStart_toEndOf="@id/actions"
-        app:layout_constraintEnd_toStartOf="@+id/gold" />
-
-    <TextView
-        android:id="@+id/gold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gold"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:freezesText="true"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="24dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/money"
-        app:layout_constraintStart_toEndOf="@id/buys"
-        app:layout_constraintEnd_toEndOf="parent"/>
+  <TextView
+    android:id="@+id/purchase_action"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Purchase Action Card"
+    android:textColor="#FFFFFF"
+    android:textSize="24sp"
+    app:layout_constraintBottom_toTopOf="@id/action"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/victory"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
