--- a/app/src/main/res/layout/fragment_do_action.xml
+++ b/app/src/main/res/layout/fragment_do_action.xml
@@ -79,7 +79,7 @@
     android:id="@+id/play_card"
     android:layout_width="125dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape"
+    android:background="@drawable/blue_button"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
     android:shadowDx="0"
@@ -97,7 +97,7 @@
     android:id="@+id/end_action"
     android:layout_width="125dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape"
+    android:background="@drawable/blue_button"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
     android:shadowDx="0"
@@ -116,7 +116,7 @@
     android:id="@+id/end_turn"
     android:layout_width="125dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape"
+    android:background="@drawable/blue_button"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
     android:shadowDx="0"
