--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -63,7 +63,7 @@
     android:id="@+id/buy_card"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape"
+    android:background="@drawable/blue_button"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
     android:shadowDx="0"
@@ -81,7 +81,7 @@
     android:id="@+id/end_turn"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/buttonshape"
+    android:background="@drawable/blue_button"
     android:fontFamily="monospace"
     android:shadowColor="#A8A8A8"
     android:shadowDx="0"
