--- a/app/src/main/res/layout/fragment_turn_summary.xml
+++ b/app/src/main/res/layout/fragment_turn_summary.xml
@@ -86,7 +86,7 @@
         android:id="@+id/start_my_turn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/buttonshape"
+        android:background="@drawable/blue_button"
         android:fontFamily="monospace"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
