--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,15 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
+  <group android:checkableBehavior="single">
+
 <!--  <item-->
 <!--    android:id="@+id/preferences"-->
 <!--    android:title="Preferences"-->
 <!--    app:showAsAction="never"/>-->
 
   <item
+    android:id="@+id/instructions"
+    android:title="Game Instructions"
+    app:showAsAction="never"/>
+
+  </group>
+
+  <item
     android:id="@+id/sign_out"
     android:title="@string/sign_out"
     app:showAsAction="never"/>
-
 
 </menu>
