--- a/app/src/main/res/layout/fragment_buys_options.xml
+++ b/app/src/main/res/layout/fragment_buys_options.xml
@@ -121,6 +121,7 @@
     android:textAlignment="center"
     android:textColor="#FFFFFF"
     android:textSize="24sp"
+    android:background="@color/colorAccent"
     app:layout_constraintBottom_toTopOf="@id/purchase_money"
     app:layout_constraintEnd_toStartOf="@+id/gold"
     app:layout_constraintStart_toEndOf="@id/actions"
