--- a/app/src/main/res/layout/fragment_buys_options.xml
+++ b/app/src/main/res/layout/fragment_buys_options.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout
+  xmlns:android="http://schemas.android.com/apk/res/android">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  <data>
+    <variable
+      name="viewModel"
+      type="edu.cnm.deepdive.dominionandroid.viewmodel.GameViewModel"/>
+  </data>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/frameLayout2"
@@ -180,3 +189,5 @@
     app:layout_constraintTop_toBottomOf="@id/victory"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
