--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layout
+  xmlns:android="http://schemas.android.com/apk/res/android">
+
+  <data>
+    <variable
+      name="viewModel"
+      type="edu.cnm.deepdive.dominionandroid.viewmodel.GameViewModel"/>
+  </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
@@ -98,3 +108,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
