--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,7 +11,48 @@
   <include
     android:id="@+id/toolbar"
     layout="@layout/toolbar"/>
+<!--  <TextView-->
+<!--    android:id="@+id/actions"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:freezesText="true"-->
+<!--    android:textColor="#FFFFFF"-->
+<!--    android:textSize="24sp"-->
+<!--    android:text="@{viewModel.myActionsRemaining}"-->
+<!--    android:background="@color/colorAccent"-->
+<!--    app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/buys"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@id/players_hand"-->
+<!--    app:layout_constraintVertical_bias="1.0"/>-->
+<!--  &lt;!&ndash;    android:text="@{viewModel.myActionsRemaining}"&ndash;&gt;-->
 
+
+<!--  <TextView-->
+<!--    android:id="@+id/buys"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:freezesText="true"-->
+<!--    android:text="@{viewModel.myBuysRemaining}"-->
+<!--    android:textColor="#FFFFFF"-->
+<!--    android:textSize="24sp"-->
+<!--    app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"-->
+<!--    app:layout_constraintEnd_toStartOf="@+id/gold"-->
+<!--    app:layout_constraintStart_toEndOf="@id/actions"-->
+<!--    app:layout_constraintTop_toBottomOf="@id/players_hand"/>-->
+
+<!--  <TextView-->
+<!--    android:id="@+id/gold"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:freezesText="true"-->
+<!--    android:text="@{viewModel.myBuyingPower}"-->
+<!--    android:textColor="#FFFFFF"-->
+<!--    android:textSize="24sp"-->
+<!--    app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toEndOf="@id/buys"-->
+<!--    app:layout_constraintTop_toBottomOf="@id/players_hand"/>-->
   <fragment
     android:id="@+id/nav_host_fragment"
     android:name="androidx.navigation.fragment.NavHostFragment"
