getting dummy data from Heroku Server successfully!

--- a/app/src/main/res/layout/fragment_buys_options.xml
+++ b/app/src/main/res/layout/fragment_buys_options.xml
@@ -18,6 +18,23 @@
   android:background="#615757"
   tools:context=".controller.BuysOptionsFragment">
 
+
+    <androidx.core.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+      <TextView
+        android:id="@+id/server_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.core.widget.NestedScrollView>
+
   <Button
     android:id="@+id/end_turn"
     android:layout_width="wrap_content"
