--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -85,7 +85,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@id/end_turn"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/view_pager"/>
+      app:layout_constraintTop_toBottomOf="@id/num_cards_in_stack"/>
 
     <Button
       android:id="@+id/end_turn"
@@ -104,7 +104,21 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/buy_card"
-      app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
+      app:layout_constraintTop_toBottomOf="@+id/num_cards_in_stack"/>
+
+    <TextView
+      android:id="@+id/num_cards_in_stack"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text=" : Cards Available"
+      android:textSize="24sp"
+      android:textAlignment="center"
+      android:textColor="#DA0808"
+      app:layout_constraintTop_toBottomOf="@id/view_pager"
+      app:layout_constraintBottom_toTopOf="@id/end_turn"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
   </androidx.constraintlayout.widget.ConstraintLayout>
