cards and stacks load in appropriate fragments from GSI

--- a/app/src/main/res/layout/fragment_do_buys.xml
+++ b/app/src/main/res/layout/fragment_do_buys.xml
@@ -22,7 +22,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:freezesText="true"
-      android:text="Actions"
+      android:text="@{Integer.toString(viewModel.myActionsRemaining)}"
       android:textColor="#FFFFFF"
       android:textSize="24sp"
       app:layout_constraintBottom_toTopOf="@id/view_pager"
@@ -36,20 +36,20 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:freezesText="true"
-      android:text="Buys"
       android:textColor="#FFFFFF"
       android:textSize="24sp"
       app:layout_constraintBottom_toTopOf="@id/view_pager"
       app:layout_constraintEnd_toStartOf="@+id/gold"
       app:layout_constraintStart_toEndOf="@id/actions"
-      app:layout_constraintTop_toTopOf="parent"/>
+      app:layout_constraintTop_toTopOf="parent"
+      android:text= "@{Integer.toString(viewModel.myBuysRemaining)}"/>
 
     <TextView
       android:id="@+id/gold"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:freezesText="true"
-      android:text="Gold"
+      android:text="@{Integer.toString(viewModel.myBuyingPower)}"
       android:textColor="#FFFFFF"
       android:textSize="24sp"
       app:layout_constraintBottom_toTopOf="@id/view_pager"
@@ -110,7 +110,7 @@
       android:id="@+id/num_cards_in_stack"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text=" : Cards Available"
+      android:text="# in stack"
       android:textSize="24sp"
       android:textAlignment="center"
       android:textColor="#DA0808"
