--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
     <action
       android:id="@+id/action_newGameFragment_to_waiting"
       app:destination="@id/waiting"/>
+    <action
+      android:id="@+id/action_newGameFragment_to_doActionFragment2"
+      app:destination="@id/doActionFragment"/>
   </fragment>
 
   <fragment
