--- a/app/src/main/res/layout/card_image.xml
+++ b/app/src/main/res/layout/card_image.xml
@@ -16,8 +16,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/fab_margin"
-    android:text="Discard?"
-    android:visibility="visible"
+    android:text="Select"
+    android:textSize="48sp"
+    android:visibility="gone"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"/>
 
