--- a/app/src/main/res/layout/fragment_do_action.xml
+++ b/app/src/main/res/layout/fragment_do_action.xml
@@ -123,6 +123,26 @@
       app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
 
     <Button
+      android:id="@+id/discard"
+      android:layout_width="125dp"
+      android:layout_height="wrap_content"
+      android:background="@drawable/blue_button"
+      android:fontFamily="monospace"
+      android:shadowColor="#A8A8A8"
+      android:shadowDx="0"
+      android:shadowDy="0"
+      android:shadowRadius="5"
+      android:text="Discard"
+      android:textAlignment="center"
+      android:textColor="#FFFFFF"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/end_turn"
+      app:layout_constraintStart_toEndOf="@id/play_card"
+      app:layout_constraintTop_toBottomOf="@+id/view_pager"
+      android:visibility="gone"/>
+
+    <Button
       android:id="@+id/end_turn"
       android:layout_width="125dp"
       android:layout_height="wrap_content"
